--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,4 +21,19 @@ services:
     volumes_from:
       - app
     ports:
-      8080:80
+      - 8080:80
+
+  database:
+    image: mysql:5.6
+    volumes:
+      - dbdata:/var/lib/mysql
+    environment:
+      - "MYSQL_DATABASE=homestead"
+      - "MYSQL_USER=homestead"
+      - "MYSQL_PASSWORD=secret"
+      - "MYSQL_ROOT_PASSWORD=secret"
+    ports:
+        - 33061:3306
+
+volumes:
+  dbdata:
