--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 
 before_install:
-- docker build -t morgenes23/php-docker-travis -f .
+- docker build -t morgenes23/php-docker-travis .
 
 #script:
 #  - docker run morgenes23/test-php-docker-travis
